0033009: Foundation Classes - Bnd_OBB::ReBuild() expects point array starting from 0

Add test. Update OBBTool constructor for any bounds of array of points.